--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,20 @@
+title: <p align="center"> Rohan Mehta </p>
+
+#logo: "/images/picture.png?raw=true"
+
+description:
+  <p align="center">
+  #<a href="pdf/resume.pdf">Resume</a> |
+  <a href="https://www.linkedin.com/in/rohan-mehta-89a2a785/">LinkedIn</a> |
+  <a href="https://github.com/rmehta678">GitHub</a>
+  </p>
+  
+  <p align="justify">
+  I am currently pursing a Masters in Engineering at the UCLA Samueli School of Engineering
+  <br><br>
+  I am currently an Artificial Intelligence Systems Engineer at the Northrop Grumman AI&A (Artificial Intelligence & Analytics) Department
+  <br><br>
+  </p>
+  
 theme: jekyll-theme-minimal
+google_analytics: UA-145578661-1 # Google Analytics tracking ID
