--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: <p align="center"> Rohan Mehta </p>
 
-#logo: "/images/picture.png?raw=true"
+logo: "/images/Screen Shot 2021-10-09 at 5.13.18 PM.png?raw=true"
 
 description:
   <p align="center">
