--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,9 @@
 title: <p align="center"> Rohan Mehta </p>
 
-logo: "/images/Screen Shot 2021-10-09 at 5.13.18 PM.png?raw=true"
+logo: "/images/rohan_image.png?raw=true"
 
 description:
   <p align="center">
-  #<a href="pdf/resume.pdf">Resume</a> |
   <a href="https://www.linkedin.com/in/rohan-mehta-89a2a785/">LinkedIn</a> |
   <a href="https://github.com/rmehta678">GitHub</a>
   </p>
